z-index, position: fixed

--- a/css/style.css
+++ b/css/style.css
@@ -99,6 +99,36 @@
 
 .box{
     width: 684px;
-    height: 680px;
+    height: 1000px;
     background-color: coral;
+    /* position: absolute; */
+    z-index: 20;
+    
+}
+.box1{
+    width: 342px;
+    height: 340px;
+    background-color: rgb(68, 230, 149);
+    left: 140px;
+    bottom: 245px;
+    position: absolute;
+    z-index: 25;
+}
+.menu{
+    width: 100%;
+    height: 50px;
+    background-color: rgb(218, 201, 49);
+    position: fixed;
+    top: 0;
+    z-index: 100;
+}
+.popup{
+    width: 200px;
+    height: 300px;
+    background-color: rgb(201, 136, 16);
+    position: fixed;
+    top: 20%;
+    left: 45%;
+    border: 5px double rgb(238, 255, 0);
+    z-index: 99;
 }
